--- a/index.html
+++ b/index.html
@@ -65,49 +65,61 @@
                 </div>
             </div>
         </section>
-        <section class="section__oradores">
-            <div class="oradores__title">
-                <p class="p__oradores">CONOCE A LOS</p>
-                <h3>ORADORES</h3>
+        <section class="container-fluid section__oradores">
+            <div class="row">
+                <div class="col ps-0 pe-0 oradores__title">
+                    <p class="p__oradores">CONOCE A LOS</p>
+                    <h3>ORADORES</h3>
+                </div>
             </div>
-            <div class="oradores__cards">
-                <div class="cards__images">
-                    <img class="img" src="images/steve.jpg" alt="Steve Jobs">
-                    <div class="cards__text">
-                        <span class="badge text-bg-warning">JavaScript</span>
-                        <span class="badge text-bg-info bdg">React</span>
-                        <h6>Steve Jobs</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+            <div class="row">
+                <div class="col-lg-4 col-md-12 ms-0 me-0 ps-0 pe-0 d-flex justify-content-center">
+                    <div class="cards__images ms-0 me-0 ps-0 pe-0" style="width: 20rem;">
+                        <img src="images/steve.jpg" class="card-img-top img-fluid" alt="Steve Jobs">
+                        <div class="card-body cards__text">
+                            <span class="badge text-bg-warning">JavaScript</span>
+                            <span class="badge text-bg-info bdg">React</span>
+                            <h5 class="card-title">Steve Jobs</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="cards__images">
-                    <img class="img" src="images/bill.jpg" alt="Bill Gates">
-                    <div class="cards__text">
-                        <span class="badge text-bg-warning">JavaScript</span>
-                        <span class="badge text-bg-info bdg">React</span>
-                        <h6>Bill Gates</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                <div class="col-lg-4 col-md-12 ms-0 me-0 ps-0 pe-0 d-flex justify-content-center">
+                    <div class="card cards__images ms-0 me-0 ps-0 pe-0" style="width: 20rem;">
+                        <img src="images/bill.jpg" class="card-img-top img-fluid" alt="Bill Gates">
+                        <div class="card-body cards__text">
+                            <span class="badge text-bg-warning">JavaScript</span>
+                            <span class="badge text-bg-info bdg">React</span>
+                            <h5 class="card-title">Bill Gates</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="cards__images">
-                    <img class="img" src="images/ada.jpeg" alt="Ada Lovelace">
-                    <div class="cards__text">
-                        <span class="badge text-bg-secondary">Negocios</span>
-                        <span class="badge text-bg-danger">Stratups</span>
-                        <h6>Ada Lovelace</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                <div class="col-lg-4 col-md-12 ms-0 me-0 ps-0 pe-0 d-flex justify-content-center">    
+                    <div class="card cards__images ms-0 me-0 ps-0 pe-0" style="width: 20rem;">
+                        <img src="images/ada.jpeg" class="card-img-top img-fluid" alt="Ada Lovelace">
+                        <div class="card-body cards__text">
+                            <span class="badge text-bg-secondary">Negocios</span>
+                            <span class="badge text-bg-danger">Stratups</span>
+                            <h5 class="card-title">Ada Lovelace</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section__place">
-            <div>
-                <img class="place__image" src="images/honolulu.jpg" alt="">
-            </div>
-            <div class="place__text">
-                <h3 class="place__text--1">Bs As - Octubre</h3>
-                <p class="place__text--1">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales cidudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de superficie).</p>
-                <button class="btn btn-primary btn1 place__text--1">Conocé más</button>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 col-md-12 ps-0 pe-0">
+                    <img class="place w-100 h-100" src="images/honolulu.jpg" alt="">
+                </div>
+                <div class="col-lg-6 col-md-12 ps-0 pe-0">
+                    <div class="place w-100 h-100">
+                        <h3 class="place__text--1">Bs As - Octubre</h3>
+                        <p class="place__text--1">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales cidudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de superficie).</p>
+                        <button class="btn btn-primary btn1 place__text--1">Conocé más</button>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="section__oradores">
@@ -133,6 +145,7 @@
                     <button class="btn btn-green" type="button">Enviar</button>
                 </div>
             </div>
+        </div>
     </main>
     <footer>
         <section class="section__footer">
