volviendo a cards sin bootstrap

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid section__oradores">
+<!--         <section class="container-fluid section__oradores">
             <div class="row">
                 <div class="col ps-0 pe-0 oradores__title">
                     <p class="p__oradores">CONOCE A LOS</p>
@@ -107,7 +107,50 @@
                     </div>
                 </div>
             </div>
+        </section> -->
+
+
+
+        <section class="section__oradores">
+            <div class="oradores__title">
+                <p class="p__oradores">CONOCE A LOS</p>
+                <h3>ORADORES</h3>
+            </div>
+            <div class="oradores__cards">
+                <div class="cards__images">
+                    <img class="img" src="images/steve.jpg" alt="Steve Jobs">
+                    <div class="cards__text">
+                        <span class="badge text-bg-warning">JavaScript</span>
+                        <span class="badge text-bg-info bdg">React</span>
+                        <h6>Steve Jobs</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                    </div>
+                </div>
+                <div class="cards__images">
+                    <img class="img" src="images/bill.jpg" alt="Bill Gates">
+                    <div class="cards__text">
+                        <span class="badge text-bg-warning">JavaScript</span>
+                        <span class="badge text-bg-info bdg">React</span>
+                        <h6>Bill Gates</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                    </div>
+                </div>
+                <div class="cards__images">
+                    <img class="img" src="images/ada.jpeg" alt="Ada Lovelace">
+                    <div class="cards__text">
+                        <span class="badge text-bg-secondary">Negocios</span>
+                        <span class="badge text-bg-danger">Stratups</span>
+                        <h6>Ada Lovelace</h6>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                    </div>
+                </div>
+            </div>
         </section>
+
+
+
+
+
         <section class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-12 ps-0 pe-0">
