--- a/index.html
+++ b/index.html
@@ -21,24 +21,26 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item d-flex justify-content-end">
-                            <a class="nav-link links--principales" aria-current="page" href="#">La conferencia</a>
-                        </li>
-                        <li class="nav-item d-flex justify-content-end">
-                            <a class="nav-link links" href="#oradores">Los oradores</a>
-                        </li>
-                        <li class="nav-item d-flex justify-content-end">
-                            <a class="nav-link links" href="#lugar-fecha">El lugar y la fecha</a>
-                        </li>
-                        <li class="nav-item d-flex justify-content-end">
-                            <a class="nav-link links" href="#conviertete">Conviértete en orador</a>
-                        </li>
-                        <li class="nav-item d-flex justify-content-end">
-                            <a class="nav-link links--final" href="#tickets">Comprar tickets</a>
-                        </li>
-                    </ul>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <div class="">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link links--principales" aria-current="page" href="#">La conferencia</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link links" href="#oradores">Los oradores</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link links" href="#lugar-fecha">El lugar y la fecha</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link links" href="#conviertete">Conviértete en orador</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link links--final" href="#tickets">Comprar tickets</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </nav>
@@ -65,94 +67,49 @@
                 </div>
             </div>
         </section>
-<!--         <section class="container-fluid section__oradores">
-            <div class="row">
-                <div class="col oradores__title">
-                    <p class="p__oradores">CONOCE A LOS</p>
-                    <h3>ORADORES</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col ms-0 me-0 d-flex justify-content-center">
-                    <div class="cards__images ms-0 me-0" style="width: 20rem;">
-                        <img src="images/steve.jpg" class="card-img-top img-fluid" alt="Steve Jobs">
-                        <div class="card-body cards__text">
-                            <span class="badge text-bg-warning">JavaScript</span>
-                            <span class="badge text-bg-info bdg">React</span>
-                            <h5 class="card-title">Steve Jobs</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col ms-0 me-0 d-flex justify-content-center">
-                    <div class="card cards__images ms-0 me-0" style="width: 20rem;">
-                        <img src="images/bill.jpg" class="card-img-top img-fluid" alt="Bill Gates">
-                        <div class="card-body cards__text">
-                            <span class="badge text-bg-warning">JavaScript</span>
-                            <span class="badge text-bg-info bdg">React</span>
-                            <h5 class="card-title">Bill Gates</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col ms-0 me-0 d-flex justify-content-center">    
-                    <div class="card cards__images ms-0 me-0" style="width: 20rem;">
-                        <img src="images/ada.jpeg" class="card-img-top img-fluid" alt="Ada Lovelace">
-                        <div class="card-body cards__text">
-                            <span class="badge text-bg-secondary">Negocios</span>
-                            <span class="badge text-bg-danger">Stratups</span>
-                            <h5 class="card-title">Ada Lovelace</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
-
-
         <section class="container-fluid section__oradores">
-            <div class="row m-0">
+            <div class="m-0">
                 <div class="col oradores__title">
                     <p class="p__oradores">CONOCE A LOS</p>
                     <h3>ORADORES</h3>
                 </div>
             </div>
             <div class="oradores__cards">
-                <div class="cards__images">
-                    <img class="" src="images/steve.jpg" alt="Steve Jobs">
-                    <div class="cards__text">
-                        <span class="badge text-bg-warning">JavaScript</span>
-                        <span class="badge text-bg-info bdg">React</span>
-                        <h6>Steve Jobs</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                <div class="d-flex justify-content-center">
+                    <div class="cards__images">
+                        <img class="" src="images/steve.jpg" alt="Steve Jobs">
+                        <div class="cards__text">
+                            <span class="badge text-bg-warning">JavaScript</span>
+                            <span class="badge text-bg-info bdg">React</span>
+                            <h6>Steve Jobs</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="cards__images">
-                    <img class="" src="images/bill.jpg" alt="Bill Gates">
-                    <div class="cards__text">
-                        <span class="badge text-bg-warning">JavaScript</span>
-                        <span class="badge text-bg-info bdg">React</span>
-                        <h6>Bill Gates</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                <div class="d-flex justify-content-center">
+                    <div class="cards__images">
+                        <img class="" src="images/bill.jpg" alt="Bill Gates">
+                        <div class="cards__text">
+                            <span class="badge text-bg-warning">JavaScript</span>
+                            <span class="badge text-bg-info bdg">React</span>
+                            <h6>Bill Gates</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="cards__images">
-                    <img class="" src="images/ada.jpeg" alt="Ada Lovelace">
-                    <div class="cards__text">
-                        <span class="badge text-bg-secondary">Negocios</span>
-                        <span class="badge text-bg-danger">Stratups</span>
-                        <h6>Ada Lovelace</h6>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                <div class="d-flex justify-content-center">
+                    <div class="cards__images">
+                        <img class="" src="images/ada.jpeg" alt="Ada Lovelace">
+                        <div class="cards__text">
+                            <span class="badge text-bg-secondary">Negocios</span>
+                            <span class="badge text-bg-danger">Stratups</span>
+                            <h6>Ada Lovelace</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe, ipsam et. Cumque dicta quisquam temporibus. Esse ipsum tempora aliquid vero blanditiis cumque! Aliquid quasi veniam incidunt recusandae maiores, fugiat adipisci.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-
-
-
-
-
         <section class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 p-0">
