cambio posiciones de los sections

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid">
+        <section class="container-fluid section__place">
             <div class="row">
                 <div class="col-lg-6 p-0">
                     <img class="place w-100 h-100" src="images/honolulu.jpg" alt="">
