agrego links ancla

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link links--principales" aria-current="page" href="#">La conferencia</a>
+                                <a class="nav-link links--principales" aria-current="page" href="#conferencia">La conferencia</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link links" href="#oradores">Los oradores</a>
@@ -59,9 +59,10 @@
                         <img src="images/ba3.jpg" class="d-block w-100 images" alt="ba3">
                     </div>
                     <div class="text">
+                        <a id="conferencia" href=""></a>
                         <h1>Conf Bs As</h1>
                         <p>Bs As llega por primera vez a Argentina. Un evento para comprartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
-                        <button type="button" class="btn btn-primary btn1">Quiero ser orador</button>
+                        <button type="button" class="btn btn-primary btn1"><a class="" href="#oradores">Quiero ser orador</a></button>
                         <button type="button" class="btn btn-primary btn2">Comprar tickets</button>
                     </div>
                 </div>
@@ -70,6 +71,7 @@
         <section class="container-fluid section__oradores">
             <div class="m-0">
                 <div class="col oradores__title">
+                    <a id="oradores" href=""></a>
                     <p class="p__oradores">CONOCE A LOS</p>
                     <h3>ORADORES</h3>
                 </div>
@@ -117,6 +119,7 @@
                 </div>
                 <div class="col-lg-6 p-0">
                     <div class="place w-100 h-100">
+                        <a id="lugar-fecha" href=""></a>
                         <h3 class="place__text--1">Bs As - Octubre</h3>
                         <p class="place__text--1">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales cidudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km<sup>2</sup> de superficie).</p>
                         <button class="btn btn-primary btn1 place__text--1">Conocé más</button>
@@ -126,6 +129,7 @@
         </section>
         <section class="section__oradores">
             <div class="oradores__title">
+                <a id="conviertete" href=""></a>
                 <p class="p__oradores">CONVIÉRTETE EN UN</p>
                 <h3>ORADOR</h3>
                 <p>Anótate como orador para dar una <span class="span">charla ignite</span>. Cuéntanos de qué quieres hablar!</p>
