--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                     <div class="">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link links--principales" aria-current="page" href="#conferencia">La conferencia</a>
+                                <a class="nav-link links--principales" href="../index.html/#conferencia">La conferencia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links" href="#oradores">Los oradores</a>
+                                <a class="nav-link links" href="../index.html/#oradores">Los oradores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links" href="#lugar-fecha">El lugar y la fecha</a>
+                                <a class="nav-link links" href="../index.html/#lugar-fecha">El lugar y la fecha</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links" href="#conviertete">Conviértete en orador</a>
+                                <a class="nav-link links" href="../index.html/#conviertete">Conviértete en orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links--final" href="#tickets">Comprar tickets</a>
+                                <a class="nav-link links--final" aria-current="page" href="#">Comprar tickets</a>
                             </li>
                         </ul>
                     </div>
@@ -63,7 +63,7 @@
                         <h1>Conf Bs As</h1>
                         <p>Bs As llega por primera vez a Argentina. Un evento para comprartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                         <button type="button" class="btn btn-primary btn1"><a class="" href="#oradores">Quiero ser orador</a></button>
-                        <button type="button" class="btn btn-primary btn2">Comprar tickets</button>
+                        <button type="button" class="btn btn-primary btn2"><a class="" href="pages/tickets.html">Comprar tickets</a></button>
                     </div>
                 </div>
             </div>
