Agrego pagina tickets

--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -18,7 +18,7 @@
                 <a class="navbar-brand" href="../index.html">
                     <img src="../images/codoacodo.png" alt="Logo" width="100" class="d-inline-block align-text-top">
                 </a>
-                <a class="navbar-brand links--principales" href="#">Conf Bs As</a>
+                <a class="navbar-brand links--principales">Conf Bs As</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,19 +26,19 @@
                     <div class="">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link links" aria-current="page" href="#conferencia">La conferencia</a>
+                                <a class="nav-link links" aria-current="page" href="../index.html#conferencia">La conferencia</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links" href="#oradores">Los oradores</a>
+                                <a class="nav-link links" href="../index.html#oradores">Los oradores</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links" href="#lugar-fecha">El lugar y la fecha</a>
+                                <a class="nav-link links" href="../index.html#lugar-fecha">El lugar y la fecha</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links--principales" href="#conviertete">Conviértete en orador</a>
+                                <a class="nav-link links--principales" href="../index.html#conviertete">Conviértete en orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links--final" href="#tickets">Comprar tickets</a>
+                                <a class="nav-link links--final" href="#">Comprar tickets</a>
                             </li>
                         </ul>
                     </div>
