--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link links" href="#conviertete">Conviértete en orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link links--final" aria-current="page" href="../integrador/pages/tickets.html">Comprar tickets</a>
+                                <a class="nav-link links--final" aria-current="page" href="pages/tickets.html">Comprar tickets</a>
                             </li>
                         </ul>
                     </div>
