--- a/pages/tickets.html
+++ b/pages/tickets.html
@@ -95,7 +95,7 @@
                 <div class="row">
                     <div class="col p-2">
                         <label class="form-label">Cantidad</label>
-                        <input type="number" class="form-control" id="cantidad" placeholder="Cantidad" aria-label="Last name" min="1">
+                        <input type="number" class="form-control" id="cantidad" placeholder="Cantidad" aria-label="Last name" min="1" pattern="[1-9]{0}">
                     </div>
                     <div class="col p-2">
                         <label class="form-label">Categoría</label>
@@ -117,7 +117,7 @@
                 </div>
                 <div class="row">
                     <div class="col p-2">
-                        <button style="width: 27.6rem;" class="btn btn-green " type="reset">Borrar</button>
+                        <button style="width: 27.6rem;" class="btn btn-green " type="reset" id="reset">Borrar</button>
                         <button style="width: 27.6rem;" class="btn btn-green " type="button" id="resumen">Resumen</button>
                     </div>
                 </div>
