agrego login con sesiones

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
     </header>
-    <main style="height: 65vh;">
+    <main>
         <div class="text-center">
             <h1>Crear Cuenta</h1>
         </div>
